<resources>
    <string name="app_name">Sistema de Tienda</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="password">Password</string>
    <string name="entrar">Entrar</string>
    <string name="username">Username</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="producto">Producto</string>
    <string name="inventario">Inventario</string>
    <string name="venta">Venta</string>
    <string name="devolucion">Devolución</string>
    <string name="ajustes">Ajustes</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="inicio">Inicio</string>
    <string name="salir">Salir</string>
    <string name="regresar">regresar</string>
    <string name="agregar_producto">Agregar</string>
    <string name="return_description">Returns to previous screen</string>
    <string name="clave_del_producto">Clave del producto</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="descripcion_del_producto">Descripcion del producto</string>
    <string name="nuevo_producto">Nuevo Producto</string>
    <string name="editar_producto">Editar Producto</string>
    <string name="borrar_producto">Borrar Producto</string>
    <string name="mostrar_productos">Mostrar Productos</string>
    <string name="registrar_producto">Registrar Producto</string>
    <string name="quitar_producto">Quitar Producto</string>
    <string name="deshabilitar_producto">Deshabilitar Producto</string>
    <string name="mostrar_inventario">Mostrar Inventario</string>
    <string name="modificar_existencias">Modificar Existencias</string>
    <string name="ver_ventas">Ver Ventas</string>
    <string name="registrar_venta">Registrar Venta</string>
    <string name="registrar_devolucion">Registrar Devolución</string>
    <string name="ver_devoluciones">Ver Devoluciones</string>
    <string name="ajustar_inventario">Ajustar Inventario</string>
    <string name="agregar_usuario">Agregar Usuario</string>
    <string name="editar_usuario">Editar Usuario</string>
    <string name="borrar_usuario">Borrar Usuario</string>
    <string name="logo">logo</string>
    <string name="borrar_campos">Borrar Campos</string>
    <string name="buscar">Buscar</string>
    <string name="actualizar">Actualizar</string>
    <string name="borrar">Borrar</string>
    <string name="id">ID</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="nueva_categoria">Nueva Categoria</string>
    <string name="agregar">Agregar</string>
    <string name="clave_de_la_cateogria">Clave de la cateogría</string>
    <string name="nombre_de_la_categoria">Nombre de la categoría</string>
    <string name="descripcion_de_la_categoria">Descripcion de la Categoría</string>
    <string name="categoria">Categoría</string>
    <string name="filtrar_por">Filtrar por</string>
    <string name="mostrar_usuarios">Mostrar Usuarios</string>
    <string name="tipo">Tipo</string>
    <string name="clave_de_usuario">Clave de Usuario</string>
    <string name="nombre_del_usuario">Nombre del usuario</string>
    <string name="apellido_del_usuario">Apellido del usuario</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="tipo_de_usuario">Tipo de Usuario</string>
    <string name="buscar_usuario">Buscar Usuario</string>
    <string name="existencia_inicial">Existencia inicial</string>
    <string name="precio_unitario">Precio Unitario</string>
    <string name="disponibilidad">Disponibilidad</string>
    <string name="registrar">Registrar</string>
    <string name="existencia">Existencia</string>
    <string name="cambiar_status">Cambiar Status</string>
    <string name="cambiar_producto">Cambiar producto</string>
    <string name="status">Status</string>
    <string name="anadir">Añadir</string>
    <string name="cantidad">Cantidad</string>
    <string name="finalizar">Finalizar</string>
    <string name="id_prod">ID Prod</string>
    <string name="clave_de_venta">Clave de venta</string>
    <string name="completar">Completar</string>
</resources>