<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/inicio"
            />
        <item
            android:id="@+id/producto"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/producto"
            />
        <item
            android:id="@+id/inventario"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/inventario"/>
        <item
            android:id="@+id/ventas"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/venta"/>

        <item
            android:id="@+id/devolucion"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/devolucion"/>
        <item
            android:id="@+id/ajustes"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/ajustes"/>
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/cerrar_sesion"/>
    </group>
</menu>