<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_blue"
    android:orientation="vertical"
    tools:context=".DeleteUser">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/returnDeleteUser"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/returnicon"
            android:contentDescription="@string/return_description" />

        <ImageButton
            android:id="@+id/eraseFields"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/borrar_campos"
            android:contentDescription="@string/borrar_campos" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="600dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/deleteClaveUsuario"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/clave_de_usuario" />

            <EditText
                android:id="@+id/deleteNombreUsuario"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="110dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/nombre_del_usuario"/>

            <EditText
                android:id="@+id/deleteApellidoUsuario"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="190dp"
                android:gravity="top"
                android:hint="@string/apellido_del_usuario"/>

            <EditText
                android:id="@+id/deleteTelefonoUsuario"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="270dp"
                android:gravity="top"
                android:hint="@string/telefono" />

            <EditText
                android:id="@+id/deleteCorreoUsuario"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="350dp"
                android:gravity="top"
                android:hint="@string/correo" />

            <EditText
                android:id="@+id/deletePasswordUsuario"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="430dp"
                android:gravity="top"
                android:hint="@string/password" />

            <Button
                android:id="@+id/buscarUsuario"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="490dp"
                android:gravity="top"
                android:text="@string/buscar_usuario" />

            <Button
                android:id="@+id/deleteUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/borrar" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>