<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_blue"
    android:orientation="vertical"
    tools:context=".StatusProduct">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/returnInventory"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/returnicon"
            android:contentDescription="@string/return_description" />

        <ImageButton
            android:id="@+id/eraseFields"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/borrar_campos"
            android:contentDescription="@string/borrar_campos" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/alterClaveProducto"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/clave_del_producto" />

            <EditText
                android:id="@+id/editPrecioProducto"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="130dp"
                android:hint="@string/precio_unitario" />

            <Button
                android:id="@+id/editStatusProducto"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="210dp"
                android:gravity="top"
                android:text="@string/status" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buscarProducto"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/buscar" />

                <Button
                    android:id="@+id/actualizarProducto"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/actualizar" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>