<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_blue"
    android:orientation="vertical"
    tools:context=".AddCategory">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/returnAddCat"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/returnicon"
            android:contentDescription="@string/return_description" />

        <ImageButton
            android:id="@+id/eraseFields"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/borrar_campos"
            android:contentDescription="@string/borrar_campos" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="600dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/addClaveCat"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/clave_de_la_cateogria" />

            <EditText
                android:id="@+id/addNombreCat"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="130dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/nombre_de_la_categoria"/>

            <EditText
                android:id="@+id/addDescripcionCategoria"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="210dp"
                android:hint="@string/descripcion_de_la_categoria"
                android:gravity="top"/>

            <Button
                android:id="@+id/agregarCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="50dp"
                android:text="@string/agregar" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>