<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowInventory"
    android:background="@color/pale_blue"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/returnShowInv"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/returnicon"
            android:contentDescription="@string/return_description" />

        <Button
            android:id="@+id/filtrarTablaInv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/filtrar_por"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TableLayout
            android:id="@+id/topRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:isScrollContainer="true"
            tools:ignore="UselessParent">
            <TableRow
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:text="@string/id"
                    android:textAlignment="center"
                    android:background="@color/teal_200"/>

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@color/teal_200"
                    android:padding="10dp"
                    android:text="PU"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:text="@string/existencia"
                    android:textAlignment="center"
                    android:background="@color/teal_200"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TableLayout
                android:id="@+id/inventoryTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:isScrollContainer="true"
                tools:ignore="UselessParent">
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
